# auto_marketing

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Project Philosophy- Anti-Slop Content Generation.md  README.md  TASTE_IN_MARKETING.md  TODO.md  pyproject.toml  subdomain-setup-instructions.md
data/: Author samples.yaml  feeds.json
data/anti_slop/: banned_words.txt
data/hooks/: hook_templates.yaml
data/output/: carousel_template.html
data/promo/: promo_generator.py  record_walkthrough.py
data/style_samples/: anthony_bourdain.txt  derek_sivers.txt  elmore_leonard.txt  paul_graham.txt  raymond_carver.txt  vonnegut.txt
docs/: AI marketing content tools.md  NEWS_SOURCES.md  PERFORMANCE_ANALYSIS.md  Summary_LinkedIn_Marketing_Course.md  afta_linkedin.md  anti-slop.md  blog-feed-reference.md  test_blogpost.txt
docs/posts_from_my_colegue_proffesional_sloppy/: 1.txt
prompts/: auto_summarize.txt  batch_filter.txt  carousel.txt  carousel_explanatory.txt  company_profile.txt  generator.txt  generator_explanatory.txt  judge.txt  judge_explanatory.txt  philosophy.txt  source_analysis.txt  source_analysis_explanatory.txt  youtube_summary.txt
src/: main.py
src/agents/: _prompt_helpers.py  base_agent.py  generator_agent.py  judge_agent.py  litellm_generator.py  litellm_judge.py  orchestrator.py
src/app/: __init__.py  main.py  models.py  pipeline.py  scraper.py  url_resolver.py
src/carousel/: __init__.py  extractor.py  models.py  renderer.py  service.py
src/company/: __init__.py  profile.py
src/config/: creativity.yaml  (+3 more)
static/: index.html
(+29 files in other folders)
